Finalizacion de las animaciones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagenes/logo.png">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css">  -->
     <link rel="stylesheet" href="css/style2.css">
     <title>The Flowers - página principal</title>
 </head>
@@ -80,7 +80,8 @@
                         <input type="checkbox" id="añadir7">
                     </fieldset>
                 </div>
-                <button class="button" id="but">Comprar</button>
+                <!-- <button class="button" id="but">Comprar</button> -->
+                <button class="boton cuatro"><span>Comprar</span></button>
             </form>
         </main>
         <!--ends main-->
@@ -95,7 +96,8 @@
                     <h4 class="tituloChico">Por un mundo mejor</h4>
                     <p class="textoPresentacion">El cuidado del medio ambiente y el desarrollo sustentable de nuestras operaciones son parte fundamental de los compromisos de The Flowers inc. Nuestros procesos y actividades se apegan estrictamente a la normatividad y se enfocan en la protección del entorno.</p>
                     <form action="Views/nosotros.html" class="centrado">
-                        <button class="button">Conocé más sobre nosotros!</button>
+                        <!-- <button class="button">Conocé más sobre nosotros!</button> -->
+                        <button class="boton cuatro"><span>Conocé mas sobre nosotros!</span></button>
                     </form>
                 </div>
             </div>
